# SVG-export

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  animation_test.cpp  editing_test.cpp  svg_test.cpp
src/: CMakeLists.txt  export.cpp  export.h  main.cpp  svg_attributes.cpp  svg_attributes.h  svg_elements.cpp  svg_elements.h
