CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(CCO_Implementation)
SET (CMAKE_CXX_STANDARD 11)

SET(SOURCE_BASE_HEADER_FILES
  ${PROJECT_SOURCE_DIR}/src/export.h  
)

SET(SOURCE_BASE_FILES
  ${PROJECT_SOURCE_DIR}/src/export.cpp
)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src/
)

ADD_SUBDIRECTORY(src)
